--- a/about.html
+++ b/about.html
@@ -18,6 +18,20 @@
    
     <link rel="stylesheet" href="style.css" />
     <title>About Hannah</title>
+    <style>
+      h2 {
+        font-size: 28px;
+      }
+      @media (max-width:576px) {
+        h1 {
+          font-size:35px;
+        }
+        .container{
+         max-width: 90%;
+         margin: auto;
+        }
+      }
+    </style>
   </head>
   <body>
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -50,7 +64,7 @@
         </nav>
     
     <h1>About me</h1>
-    <h3>Front-end developer from Austin, USA</h3>
+    <h3>Front-end developer from Texas</h3>
     <div class="about-paragraphs text-center">
       <p class="bg-white">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -75,7 +89,7 @@
     <div id="contact">
       <h2>📮 Contact me</h2>
       <a href="mailto:Saigecodes@gmail.com" class="email-link">
-        Saigecodes@gmail.com
+        saigecodes@gmail.com
       </a>
     </div>
   </body>
