--- a/index.html
+++ b/index.html
@@ -15,8 +15,25 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"
   ></script>
-  <title>Hannah Sandlin</title>
+  <title>Front-end Dev Hannah Sandlin</title>
     <link rel="stylesheet" href="style.css" />
+    <style>
+@media (max-width: 576px) {
+  img {
+    display: none;
+  }
+  .mt-5 {
+    text-align: center;
+  }
+  .bg-white{
+    margin: 0%;
+  }
+  h1, h2, h3{
+  font-size: 30px;
+  }
+}
+
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -49,7 +66,7 @@
     </nav>
     <h2>👋 Hi I am</h2>
     <h1>Hannah Sandlin</h1>
-    <h3>🏴‍☠️ Front-end developer, based in Texas</h3>
+    <h3>🏳️Front-end developer, based in Austin</h3>
     <div class="navigation-links">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
